2009-03-27  Zack Rusin <zack@kde.org>

Reviewed by Tor Arne Vestbø.

        https://bugs.webkit.org/show_bug.cgi?id=24275

        Fix text field theming in the Qt build with the KDE 4 Oxygen
        style by adjusting the size vertically and horizontally to
        set padding on the element equal to the width of the style painted border.

Canonical link: https://commits.webkit.org/34094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42038 268f45cc-cd09-0410-ab3c-d52691b4dbfc