WebCore/platform/qt/RenderThemeQt.h
@@ -128,6 +128,7 @@ private:
     void paintMediaBackground(QPainter* painter, const IntRect& r) const;
     QColor getMediaControlForegroundColor(RenderObject* o = 0) const;
 #endif
+    void computeSizeBasedOnStyle(RenderStyle* renderStyle) const;
 
 private:
     bool supportsFocus(ControlPart) const;
@@ -144,6 +145,8 @@ private:
 
     QStyle* m_fallbackStyle;
     QStyle* fallbackStyle();
+
+    int m_frameLineWidth;
 };
 
 class StylePainter
